[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://Scenes/SpeechProcessor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/GUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 275, 170 )

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="SpeechProcessor" parent="." instance=ExtResource( 2 )]

[node name="Map" parent="." instance=ExtResource( 4 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 320, 240 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="SpawnArea" type="Area2D" parent="."]
position = Vector2( 320, 215 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea"]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 320, 240 )

[connection signal="processed_message_received" from="SpeechProcessor" to="." method="_on_SpeechProcessor_processed_message_received"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
